--- a/templates/base.html
+++ b/templates/base.html
@@ -22,29 +22,37 @@
                   <ul class="navbar-nav mr-auto">
                   </ul>
                   <ul class="navbar-nav my-2 my-lg-0">
-                      {% if user.is_authenticated %}
-                      <li class="nav-item">
-                          <a class="nav-link" href="{% url 'account_logout' %}">Logout<span class="sr-only">(current)</span></a>
-                      </li>
-                      {% if user.role == 'shop' and user.allow_by_admin %}
-                      <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_logout' %}">Create Shop<span class="sr-only">(current)</span></a>
-                      </li>
-                      {% endif %}
-                      {% if user.role == 'admin' %}
-                      <li class="nav-item">
-                        <a class="nav-link" href="{% url 'userlist' %}">Shop User List<span class="sr-only">(current)</span></a>
-                      </li>
-                      {% endif %}
-                      {% else %}
-
-                      <li class="nav-item">
-                          <a class="nav-link" href="{% url 'account_signup' %}">Signup<span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="{% url 'account_login' %}">Login<span class="sr-only">(current)</span></a>
-                      </li>
-                      {% endif %}
+                    {% if user.is_authenticated %}
+						{% if user.role == 'shop' and user.allow_by_admin %}
+							<li class="nav-item">
+								<a class="nav-link" href="{% url 'createshop' %}">Create Shop<span class="sr-only">(current)</span></a>
+							</li>
+              <li class="nav-item">
+								<a class="nav-link" href="{% url 'createproduct' %}">Create Product<span class="sr-only">(current)</span></a>
+							</li>
+						{% endif %}
+            {% if user.role == 'admin' %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'shopuserlist' %}">Shop User List<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'shoplist' %}">Shops<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+								<a class="nav-link" href="{% url 'createproduct' %}">Create Product<span class="sr-only">(current)</span></a>
+							</li>
+            {% endif %}
+						<li class="nav-item">
+                            <a class="nav-link" href="{% url 'account_logout' %}">Logout<span class="sr-only">(current)</span></a>
+                        </li>
+                    {% else %}
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'account_signup' %}">Signup<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'account_login' %}">Login<span class="sr-only">(current)</span></a>
+						</li>
+                    {% endif %}
                   </ul>
               </div>
           </nav>
