--- a/templates/shop/product_list.html
+++ b/templates/shop/product_list.html
@@ -2,14 +2,6 @@
 
 {% block content %}
 <div class="container" style="padding-top: 5%;">
-    <div style="float: right; margin-bottom: 20px;">
-        <form method="get">
-            <span class="float-right">
-            {{ object_list.form.as_p }}
-            </span>
-            <input type="submit" value="Check" class="form-control float-right btn btn-primary"/>
-        </form>
-    </div>
     <div>
         <div>
             <table class="table" style="text-align: center;">
@@ -20,11 +12,10 @@
                     <th>Shop</th>
                     <th>Purchase Price</th>
                     <th>Sale Price</th>
-                    <th>MFG Date</th>
-                    <th>Expiry Date</th>
+                    <th>Status</th>
                 </thead>
                 <tbody>
-                    {% for shop in object_list.qs %}
+                    {% for product in object_list%}
                     <tr>
                         <td>{{ forloop.counter }}</td>
                         {% if product.image %}
@@ -34,11 +25,15 @@
                             <td></td>
                         {% endif %}
                         <td>{{ product.product_name }}</td>
-                        <td>{{ product.shop_id }}</td>
+                        <td>{{ product.shop_id.shop_name }}</td>
                         <td>{{ product.purchase_price }}</td>
                         <td>{{ product.sale_price }}</td>
-                        <td>{{ product.mfg_date }}</td>
-                        <td>{{ product.expiry_date }}</td>
+                        {% if product.is_published %}
+                            <td>Published</td>
+                        {% endif %}
+                        {% if not product.is_published %}
+                            <td>Unpublished</td>
+                        {% endif %}
                         <td>                                
                             <a href="/shops/{{product.id}}/product_edit">Edit</a>
                         </td>
