--- a/templates/shop/shop_detail.html
+++ b/templates/shop/shop_detail.html
@@ -3,8 +3,10 @@
 {% block content %}
 <div class="container" style="padding-top: 5%;">
     <center><h2>{{ object.shop_name }}</h2></center>
-    <a href="/shops/{{shop.id}}/product_list" class="btn btn-primary" style="float: right;">View Products</a>
-    <a href="/shops/{{shop.id}}/create_product" class="btn btn-primary" style="float: right;">Create Product</a>
+    {% if user.is_authenticated and user.role == 'shop' or user.role == 'admin' %}
+        <a href="/shops/{{shop.id}}/product_list" class="btn btn-primary" style="float: right;">View Products</a>
+        <a href="/shops/{{shop.id}}/create_product" class="btn btn-primary" style="float: right;">Create Product</a>
+    {% endif %}
     <img src={{ object.image.url }} alt="Smiley face" width="200" height="200">
     <div style="margin-left: 300px;">
         <div><b>Owner:-</b> <span style="margin-left: 50px;">{{ object.shop_owner }}</span></div>
