--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,12 @@
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'createshop' %}">Create Shop<span class="sr-only">(current)</span></a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'shoplist' %}">View Shop<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'orderlist' %}">Customer's Orders<span class="sr-only">(current)</span></a>
+                  </li>
                 {% endif %}
                 {% if user.role == 'admin' %}
                     <li class="nav-item">
@@ -42,11 +48,11 @@
                     </li>
                     {% if user.role == 'customer' %}
                       <li class="nav-item">
-                        <b><a class="nav-link" href="/users/{{user.id}}/customer_details">Cart ({{user|total_cart_quantity:request.session.cart}})</a><span class="sr-only">(current)</span></b>
+                        <b><a class="nav-link" href="/users/{{user.id}}/customer_details">Cart ({{user|total_cart_quantity:request.session}})</a><span class="sr-only">(current)</span></b>
                       </li>
                     {% endif %}
                     <li class="nav-item">
-                      <b class="nav-link">{{ user.username }}<span class="sr-only">(current)</span></b>
+                      <a href="/users/{{user.id}}/customer_details"></a><b class="nav-link">{{ user.username }}<span class="sr-only">(current)</span></b>
                   </li>
             {% else %}
                 <li class="nav-item">
