--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <title>{% block title %}Shopping Cart App{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping Cart</title>
@@ -37,10 +38,13 @@
                 {% endif %}
                 {% if user.role == 'admin' %}
                     <li class="nav-item">
+                      <a class="nav-link" href="{% url 'dashboard' %}">Dashboard<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
                       <a class="nav-link" href="{% url 'shopuserlist' %}">Shop User List<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'shoplist' %}">Shops<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="{% url 'shoplist' %}">Shops ({{ user|total_shops:request }})<span class="sr-only">(current)</span></a>
                     </li>
                 {% endif %}
                     <li class="nav-item">
@@ -49,6 +53,9 @@
                     {% if user.role == 'customer' %}
                       <li class="nav-item">
                         <b><a class="nav-link" href="/users/{{user.id}}/customer_details">Cart ({{user|total_cart_quantity:request.session}})</a><span class="sr-only">(current)</span></b>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="{% url 'dashboard' %}">Dashboard<span class="sr-only">(current)</span></a>
                       </li>
                     {% endif %}
                     <li class="nav-item">
