--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -9,7 +9,21 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <center><h1>Admin Dashboard</h1></center>
-  <div class="row">
+  <div class="row mt-5">
+    <div class="col-md-3 btn btn-primary" style="height: 80px;">
+      <b><a href="" class="btn btn-primary" id="total_shop_count" style="font-size: 30px;"></a></b>
+    </div>
+    <div class="col-md-3">
+
+    </div>
+    <div class="col-md-3">
+
+    </div>
+    <div class="col-md-3 btn btn-primary">
+      <b><a href="" class="btn btn-primary" id="total_order_count" style="font-size: 30px;"></a></b>
+    </div>
+  </div>
+  <div class="row mt-5">
     <div class="col-md-6">
       <canvas id="total_order_chart"></canvas>
     </div>
@@ -36,6 +50,9 @@
         drawShopBarGraph(data, 'total_shop_chart');
         drawShoppieChart(data, 'pie-chart');
         console.log("drawing");
+        // debugger;
+        $('#total_shop_count').text(data.shop_names.length + ' Shops');
+        $('#total_order_count').text(data.chartdata.reduce((a, b) => a + b, 0) + ' Orders');
       },
       error: function(error_data) {
         console.log(error_data);
@@ -162,8 +179,6 @@
         }
         });
     }
-
- 
   </script>
 
 {% endblock %}
