--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
             {% if user.is_authenticated %}
                 {% if user.role == 'shop' and user.allow_by_admin %}
                   <li class="nav-item">
+                    <a class="nav-link" href="{% url 'dashboard' %}">Dashboard<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="{% url 'createshop' %}">Create Shop<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
